--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -1,1 +1,19 @@
-<p>landing-page works!</p>
+<div class="main-container">
+    <header class="header header-6">
+        ...
+    </header>
+    <div class="content-container">
+        <div class="content-area">
+            ...
+        </div>
+    </div>
+    <footer>
+        <div class="container">
+            <div class="clr-row">
+                <div class="clr-col-4">
+                    <span>Copyright &copy; 2019 Math-Dojo</span>
+                </div>
+            </div>
+        </div>
+    </footer>
+</div>
