--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -2,9 +2,72 @@
     <header class="header header-6">
         ...
     </header>
-    <div class="content-container">
+    <div class="content-container" id="primary">
         <div class="content-area">
-            ...
+            <div class="clr-row clr-align-items-center site-main">
+                <div class="clr-col">
+                    <h1>Master maths through challenges.</h1>
+                    <div class="clr-row">
+                        <div class="clr-col-4">
+                            <div class="card">
+                                <div class="card-header">
+                                    <h3>For Students & Math Enthusiasts</h3>
+                                </div>
+                                <div class="card-block">
+                                    <div class="card-title">
+                                        Block
+                                    </div>
+                                    <div class="card-text">
+                                        ...
+                                    </div>
+                                </div>
+                                <div class="card-footer">
+                                    <button class="btn btn-primary">Footer Action 1</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="clr-col-4">
+                                <div class="card">
+                                        <div class="card-header">
+                                            <h3>For Educators</h3>
+                                        </div>
+                                        <div class="card-block">
+                                            <div class="card-title">
+                                                Block
+                                            </div>
+                                            <div class="card-text">
+                                                ...
+                                            </div>
+                                        </div>
+                                        <div class="card-footer">
+                                            <button class="btn btn-outline">Footer Action 1</button>
+                                        </div>
+                                    </div>
+                        </div>
+                        <div class="clr-col-4">
+                                <div class="card">
+                                        <div class="card-header">
+                                            <h3>For Companies</h3>
+                                        </div>
+                                        <div class="card-block">
+                                            <div class="card-title">
+                                                Block
+                                            </div>
+                                            <div class="card-text">
+                                                ...
+                                            </div>
+                                        </div>
+                                        <div class="card-footer">
+                                            <button class="btn btn-outline">Footer Action 1</button>
+                                        </div>
+                                    </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="clr-col">
+                    <span>1/2</span>
+                </div>
+            </div>
         </div>
     </div>
     <footer>
