--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -72,9 +72,15 @@
     </div>
     <footer>
         <div class="container">
-            <div class="clr-row">
+            <div class="clr-row clr-justify-content-between">
                 <div class="clr-col-4">
                     <span>Copyright &copy; 2019 Math-Dojo</span>
+                </div>
+                <div class="clr-col-3">
+                    <div>Dojo icon made by <a href="https://www.flaticon.com/authors/freepik"
+                            title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/"
+                            title="Flaticon">www.flaticon.com</a>
+                    </div>
                 </div>
             </div>
         </div>
