Add header and math dojo icon

--- a/src/app/landing-page/landing-page.component.scss
+++ b/src/app/landing-page/landing-page.component.scss
@@ -1,3 +1,8 @@
+header .branding .mtdj__logo {
+   height: 36px;
+   margin: 0 9px 0 0;
+}
+
 #primary .content-area .site-main {
    height: 100%
 }
