--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -1,6 +1,19 @@
 <div class="main-container">
     <header class="header header-6">
-        ...
+        <div class="branding">
+            <a href="..." class="nav-link">
+                <img src="assets/dojo-transparent-white-outline.svg" alt="A dojo" class="mtdj__logo">
+                <span class="title">Math Dojo</span>
+            </a>
+        </div>
+        <div class="header-actions">
+            <a href="..." class="nav-link nav-text">
+                Login
+            </a>
+            <a href="..." class="nav-link nav-text">
+                Sign-up
+            </a>
+        </div>
     </header>
     <div class="content-container" id="primary">
         <div class="content-area">
