--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -18,7 +18,7 @@
     <div class="content-container" id="primary">
         <div class="content-area">
             <div class="clr-row clr-align-items-center site-main">
-                <div class="clr-col">
+                <div class="clr-col-6">
                     <h1>Master maths through challenges.</h1>
                     <div class="clr-row">
                         <div class="clr-col-4">
@@ -27,58 +27,49 @@
                                     <h3>For Students & Math Enthusiasts</h3>
                                 </div>
                                 <div class="card-block">
-                                    <div class="card-title">
-                                        Block
-                                    </div>
                                     <div class="card-text">
-                                        ...
+                                        Learn, collaborate and compete with a global community
                                     </div>
                                 </div>
                                 <div class="card-footer">
-                                    <button class="btn btn-primary">Footer Action 1</button>
+                                    <button class="btn btn-primary">Sign Up & Start</button>
                                 </div>
                             </div>
                         </div>
                         <div class="clr-col-4">
-                                <div class="card">
-                                        <div class="card-header">
-                                            <h3>For Educators</h3>
-                                        </div>
-                                        <div class="card-block">
-                                            <div class="card-title">
-                                                Block
-                                            </div>
-                                            <div class="card-text">
-                                                ...
-                                            </div>
-                                        </div>
-                                        <div class="card-footer">
-                                            <button class="btn btn-outline">Footer Action 1</button>
-                                        </div>
+                            <div class="card">
+                                <div class="card-header">
+                                    <h3>For Educators</h3>
+                                </div>
+                                <div class="card-block">
+                                    <div class="card-text">
+                                        Enhance your math teaching in and outside of the classroom
                                     </div>
+                                </div>
+                                <div class="card-footer">
+                                    <button class="btn btn-outline">Find out more</button>
+                                </div>
+                            </div>
                         </div>
                         <div class="clr-col-4">
-                                <div class="card">
-                                        <div class="card-header">
-                                            <h3>For Companies</h3>
-                                        </div>
-                                        <div class="card-block">
-                                            <div class="card-title">
-                                                Block
-                                            </div>
-                                            <div class="card-text">
-                                                ...
-                                            </div>
-                                        </div>
-                                        <div class="card-footer">
-                                            <button class="btn btn-outline">Footer Action 1</button>
-                                        </div>
+                            <div class="card">
+                                <div class="card-header">
+                                    <h3>For Companies</h3>
+                                </div>
+                                <div class="card-block">
+                                    <div class="card-text">
+                                        Identify top mathematical talent faster
                                     </div>
+                                </div>
+                                <div class="card-footer">
+                                    <button class="btn btn-outline">Footer Action 1</button>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="clr-col">
-                    <span>1/2</span>
+                <div class="clr-col-6">
+                    <img src="assets/artboard-1.png" alt="A dojo" class="mtdj__landingpage_img">
                 </div>
             </div>
         </div>
