--- a/src/app/landing-page/landing-page.component.scss
+++ b/src/app/landing-page/landing-page.component.scss
@@ -7,6 +7,10 @@ header .branding .mtdj__logo {
    height: 100%
 }
 
+#primary .content-area .site-main img.mtdj__landingpage_img {
+   width: 100%
+}
+
 footer .container {
    padding: 24px; 
 }
