Add attribution for main image

--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -86,6 +86,9 @@
                             title="Flaticon">www.flaticon.com</a>
                     </div>
                 </div>
+                <div class="clr-col-3">
+                    <div>Main Image is from Math Symbols by Shutterstock</div>
+                </div>
             </div>
         </div>
     </footer>
