--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -21,7 +21,7 @@
                 <div class="clr-col-6">
                     <h1>Master maths through challenges.</h1>
                     <div class="clr-row">
-                        <div class="clr-col-4">
+                        <div class="clr-col-4 mtdj__landingpage_card">
                             <div class="card">
                                 <div class="card-header">
                                     <h3>For Students & Math Enthusiasts</h3>
@@ -36,10 +36,10 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="clr-col-4">
+                        <div class="clr-col-4 mtdj__landingpage_card">
                             <div class="card">
                                 <div class="card-header">
-                                    <h3>For Educators</h3>
+                                    <h3>For Educators<br><span>.</span></h3>
                                 </div>
                                 <div class="card-block">
                                     <div class="card-text">
@@ -51,18 +51,19 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="clr-col-4">
+                        <div class="clr-col-4 mtdj__landingpage_card">
                             <div class="card">
                                 <div class="card-header">
-                                    <h3>For Companies</h3>
+                                    <h3>For Companies<br><span>.</span></h3>
                                 </div>
                                 <div class="card-block">
                                     <div class="card-text">
                                         Identify top mathematical talent faster
+                                        <br><span>.</span>
                                     </div>
                                 </div>
                                 <div class="card-footer">
-                                    <button class="btn btn-outline">Footer Action 1</button>
+                                    <button class="btn btn-outline">Start Hiring</button>
                                 </div>
                             </div>
                         </div>
