Reduce attribution text for image

--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -88,7 +88,7 @@
                     </div>
                 </div>
                 <div class="clr-col-3">
-                    <div>Main Image is from Math Symbols by Shutterstock</div>
+                    <div>Main Image from Math Symbols, Shutterstock</div>
                 </div>
             </div>
         </div>
