--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -69,7 +69,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="clr-col-6">
+                <div class="clr-col-6 mtdj__landingpage_img_container">
                     <img src="assets/artboard-1.png" alt="A dojo" class="mtdj__landingpage_img">
                 </div>
             </div>
