Fix over-constraining of landing image size

--- a/src/app/landing-page/landing-page.component.scss
+++ b/src/app/landing-page/landing-page.component.scss
@@ -28,7 +28,7 @@ header .branding .mtdj__logo {
 }
 
 #primary .content-area .site-main img.mtdj__landingpage_img {
-   height: 100%;
+   max-width: 100%;
    max-height: 800px;
 }
 
