--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -1,5 +1,5 @@
 <div class="main-container">
-    <header class="header header-6">
+    <header class="header header-1">
         <div class="branding">
             <a href="..." class="nav-link">
                 <img src="assets/dojo-transparent-white-outline.svg" alt="A dojo" class="mtdj__logo">
@@ -10,7 +10,7 @@
             <a href="..." class="nav-link nav-text">
                 Login
             </a>
-            <a href="..." class="nav-link nav-text">
+            <a href="..." class="nav-link nav-text mtdj__button_signup">
                 Sign-up
             </a>
         </div>
