--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -8,11 +8,11 @@
         <div class="login-group">
             <clr-input-container>
                 <label class="clr-sr-only">First & Last name</label>
-                <input type="text" name="username" clrInput placeholder="First & Last name" formControlName="name"/>
+                <input type="text" name="name" clrInput placeholder="First & Last name" formControlName="name"/>
             </clr-input-container>
             <clr-input-container>
                 <label class="clr-sr-only">Email</label>
-                <input type="text" name="username" clrInput placeholder="Email" formControlName="email"/>
+                <input type="text" name="email" clrInput placeholder="Email" formControlName="email"/>
             </clr-input-container>
             <clr-password-container>
                 <label class="clr-sr-only">Password</label>
