Add correct test for onsubmit event

--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,5 +1,5 @@
 <div class="login-wrapper">
-    <form class="login" [formGroup]="newUserSignupForm" (submit)="onSubmit()">
+    <form class="login mtdj__signupform" [formGroup]="newUserSignupForm" (submit)="onSubmit()">
         <section class="title">
             <h3 class="welcome">Welcome to</h3>
             Math Dojo
