--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -10,7 +10,7 @@
             <a href="..." class="nav-link nav-text">
                 Login
             </a>
-            <a href="..." class="nav-link nav-text mtdj__button_signup">
+            <a href="/auth/signup" class="nav-link nav-text mtdj__button_signup">
                 Sign-up
             </a>
         </div>
@@ -32,7 +32,7 @@
                                     </div>
                                 </div>
                                 <div class="card-footer">
-                                    <button class="btn btn-primary">Sign Up & Start</button>
+                                    <a href="/auth/signup" class="btn btn-primary">Sign Up & Start</a>
                                 </div>
                             </div>
                         </div>
@@ -47,7 +47,7 @@
                                     </div>
                                 </div>
                                 <div class="card-footer">
-                                    <button class="btn btn-outline">Find out more</button>
+                                    <a href="" class="btn btn-outline">Find out more</a>
                                 </div>
                             </div>
                         </div>
@@ -62,7 +62,7 @@
                                     </div>
                                 </div>
                                 <div class="card-footer">
-                                    <button class="btn btn-outline">Start Hiring</button>
+                                    <a href="" class="btn btn-outline">Start Hiring</a>
                                 </div>
                             </div>
                         </div>
