--- a/src/app/components/auth/signup/signup.component.html
+++ b/src/app/components/auth/signup/signup.component.html
@@ -23,5 +23,6 @@
             </div>
             <button type="submit" [disabled]="!newUserSignupForm.valid" class="btn btn-primary">Sign Up</button>
         </div>
+        <div class="fb-login-button" data-width="300" data-size="large" data-button-type="continue_with" data-auto-logout-link="false" data-use-continue-as="false"></div>
     </form>
 </div>
