Use angular routelinks for in app links

--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -1,16 +1,16 @@
 <div class="main-container">
     <header class="header header-1">
         <div class="branding">
-            <a href="..." class="nav-link">
+            <a routerLink="/home"  routerLinkActive="active" class="nav-link">
                 <img src="assets/dojo-transparent-white-outline.svg" alt="A dojo" class="mtdj__logo">
                 <span class="title">Math Dojo</span>
             </a>
         </div>
         <div class="header-actions">
-            <a href="..." class="nav-link nav-text">
+            <a routerLink="..."  routerLinkActive="active"  class="nav-link nav-text">
                 Login
             </a>
-            <a href="/auth/signup" class="nav-link nav-text mtdj__button_signup">
+            <a routerLink="/auth/signup"  routerLinkActive="active" class="nav-link nav-text mtdj__button_signup">
                 Sign-up
             </a>
         </div>
@@ -32,7 +32,7 @@
                                     </div>
                                 </div>
                                 <div class="card-footer">
-                                    <a href="/auth/signup" class="btn btn-primary">Sign Up & Start</a>
+                                    <a routerLink="/auth/signup" routerLinkActive="active" class="btn btn-primary">Sign Up & Start</a>
                                 </div>
                             </div>
                         </div>
