--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,1 +1,49 @@
-<p>dashboard works!</p>
+<clr-main-container class="main-container">
+    <clr-header class="header header-1">
+        <div class="branding">
+            <a routerLink="/home" routerLinkActive="active" class="nav-link">
+                <img src="assets/dojo-transparent-white-outline.svg" alt="A dojo" class="mtdj__logo">
+                <span class="title">Math Dojo</span>
+            </a>
+        </div>
+        <div class="header-nav" [clr-nav-level]="1">
+            <a routerLink="/dashboard" routerLinkActive="active" class="active nav-link"><span class="nav-text">Practice</span></a>
+            <a routerLink="/contests" routerLinkActive="active"  class="nav-link"><span class="nav-text">Compete</span></a>
+            <a routerLink="/leaderboard" routerLinkActive="active"  class="nav-link"><span class="nav-text">Compete</span></a>
+        </div>
+        <div class="header-actions">
+            <clr-dropdown>
+                <button class="nav-text" clrDropdownTrigger aria-label="toggle settings menu">
+                    <clr-icon shape="user"></clr-icon>
+                    username
+                    <clr-icon shape="caret down"></clr-icon>
+                </button>
+                <clr-dropdown-menu *clrIfOpen clrPosition="bottom-right">
+                    <a href="..." clrDropdownItem>Profile</a>
+                    <a href="..." clrDropdownItem>Preferences</a>
+                    <a href="..." clrDropdownItem>Log out</a>
+                </clr-dropdown-menu>
+            </clr-dropdown>
+        </div>
+    </clr-header>
+    <div class="content-container" id="primary">
+        <div class="content-area">
+
+        </div>
+    </div>
+    <footer>
+        <div class="container">
+            <div class="clr-row">
+                <div class="clr-col-4">
+                    <span>Copyright &copy; 2019 Math-Dojo</span>
+                </div>
+                <div class="clr-col-4">
+                    <div>Dojo icon made by <a href="https://www.flaticon.com/authors/freepik"
+                            title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/"
+                            title="Flaticon">www.flaticon.com</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+</clr-main-container>
