Use clr headers to enable header resizing

--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -1,5 +1,5 @@
-<div class="main-container">
-    <header class="header header-1">
+<clr-main-container class="main-container">
+    <clr-header class="header header-1">
         <div class="branding">
             <a routerLink="/home"  routerLinkActive="active" class="nav-link">
                 <img src="assets/dojo-transparent-white-outline.svg" alt="A dojo" class="mtdj__logo">
@@ -14,7 +14,7 @@
                 Sign-up
             </a>
         </div>
-    </header>
+    </clr-header>
     <div class="content-container" id="primary">
         <div class="content-area">
             <div class="clr-row clr-align-items-center site-main">
@@ -92,4 +92,4 @@
             </div>
         </div>
     </footer>
-</div>
+</clr-main-container>
