Rename feature area to discuss

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -9,7 +9,7 @@
         <div class="header-nav" [clr-nav-level]="1">
             <a routerLink="/dashboard" routerLinkActive="active" class="active nav-link"><span class="nav-text">Practice</span></a>
             <a routerLink="/contests" routerLinkActive="active"  class="nav-link"><span class="nav-text">Compete</span></a>
-            <a routerLink="/leaderboard" routerLinkActive="active"  class="nav-link"><span class="nav-text">Compete</span></a>
+            <a routerLink="/discuss" routerLinkActive="active"  class="nav-link"><span class="nav-text">Discuss</span></a>
         </div>
         <div class="header-actions">
             <clr-dropdown>
