--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -26,6 +26,31 @@
             </clr-dropdown>
         </div>
     </clr-header>
+    <nav class="subnav">
+        <ul class="nav">
+            <li class="nav-item">
+                <a class="nav-link active" href="#">Dashboard</a>
+            </li>
+            <li class="nav-item">
+                >
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Management</a>
+            </li>
+            <li class="nav-item">
+                >
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Cloud</a>
+            </li>
+            <li class="nav-item">
+                >
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Tenants</a>
+            </li>
+        </ul>
+    </nav>
     <div class="content-container" id="primary">
         <div class="content-area">
             <div class="clr-row">
