Add placeholder cards

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -73,6 +73,63 @@
                         </div>
                     </div>
                 </div>
+                <div class="clr-col-12 clr-col-sm-4">
+                    <div class="card">
+                        <div class="card-header">
+                            Header
+                        </div>
+                        <div class="card-block">
+                            <p class="card-text">Here is a progress bar at the very top of a card.</p>
+                            <div class="progress-block">
+                                <label>Progress</label>
+                                <div class="progress success">
+                                    <progress value="30" max="100" data-displayval="30%"></progress>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card-footer">
+                            <a class="btn btn-primary">Continue</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="clr-col-12 clr-col-sm-4">
+                    <div class="card">
+                        <div class="card-header">
+                            Header
+                        </div>
+                        <div class="card-block">
+                            <p class="card-text">Here is a progress bar at the very top of a card.</p>
+                            <div class="progress-block">
+                                <label>Progress</label>
+                                <div class="progress success">
+                                    <progress value="30" max="100" data-displayval="30%"></progress>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card-footer">
+                            <a class="btn btn-primary">Continue</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="clr-col-12 clr-col-sm-4">
+                    <div class="card">
+                        <div class="card-header">
+                            Header
+                        </div>
+                        <div class="card-block">
+                            <p class="card-text">Here is a progress bar at the very top of a card.</p>
+                            <div class="progress-block">
+                                <label>Progress</label>
+                                <div class="progress success">
+                                    <progress value="30" max="100" data-displayval="30%"></progress>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card-footer">
+                            <a class="btn btn-primary">Continue</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
