--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -29,25 +29,25 @@
     <nav class="subnav">
         <ul class="nav">
             <li class="nav-item">
-                <a class="nav-link active" href="#">Dashboard</a>
+                <a class="nav-link active" href="#">Practice</a>
             </li>
             <li class="nav-item">
                 >
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Management</a>
+                <a class="nav-link" href="#">Topic</a>
             </li>
             <li class="nav-item">
                 >
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Cloud</a>
+                <a class="nav-link" href="#">Subtopic</a>
             </li>
             <li class="nav-item">
                 >
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Tenants</a>
+                <a class="nav-link" href="#">Question</a>
             </li>
         </ul>
     </nav>
