--- a/src/app/components/practice/topic-page/topic-page.component.html
+++ b/src/app/components/practice/topic-page/topic-page.component.html
@@ -3,7 +3,21 @@
     <div class="content-container" id="primary">
         <div class="content-area">
             <div class="clr-row">
-
+                <div class="clr-col-12 clr-col-sm-8" *ngFor="let question of questions">
+                    <a [routerLink]="['/questions', question.title.toLowerCase()]" class="card clickable">
+                      <div class="card-block">
+                        <h4 class="card-title">{{question.title}}</h4>
+                        <p class="card-text">Difficulty: {{question.difficulty}}</p>
+                        <div class="progress-block">
+                            <label>Success Rate</label>
+                            <div class="progress-static labeled">
+                              <div class="progress-meter" data-value="87" data-displayval="87%"></div>
+                              <span>87%</span>
+                            </div>
+                        </div>
+                    </div>
+                    </a>
+                </div>
             </div>
         </div>
     </div>
