--- a/src/app/components/practice/topic-page/topic-page.component.html
+++ b/src/app/components/practice/topic-page/topic-page.component.html
@@ -11,8 +11,8 @@
                         <div class="progress-block">
                             <label>Success Rate</label>
                             <div class="progress-static labeled">
-                              <div class="progress-meter" data-value="87" data-displayval="87%"></div>
-                              <span>87%</span>
+                              <div class="progress-meter" [attr.data-value]="(question.successRate * 100).toFixed()" [attr.data-displayval]='(question.successRate * 100).toFixed()+"%"'></div>
+                              <span>{{(question.successRate * 100).toFixed()}}%</span>
                             </div>
                         </div>
                     </div>
