--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -3,7 +3,7 @@
     <div class="content-container" id="primary">
         <div class="content-area">
             <div class="clr-row">
-                <div class="clr-col-12 clr-col-sm-4" *ngFor="let topic of topics">
+                <div class="clr-col-lg-4 clr-col-md-6 clr-col-sm-8 clr-col-12" *ngFor="let topic of topics">
                     <a [routerLink]="['/topics', topic.name.toLowerCase().replace(' ', '-')]" class="card clickable">
                         <div class="card-header">
                             {{topic.name}}
