--- a/src/app/components/practice/question-page/question-page.component.html
+++ b/src/app/components/practice/question-page/question-page.component.html
@@ -34,20 +34,26 @@
             <div class="card-header">
               Header
             </div>
-            <form clrForm [formGroup]="exampleForm">
+            <form clrForm [formGroup]="exampleForm" clrLayout="vertical">
               <div class="card-block">
                 <div class="card-title">
                   Block
                 </div>
                 <div class="card-text">
-                  <clr-input-container>
-                    <label>Field 1 label</label>
-                    <input clrInput formControlName="sample" />
-                  </clr-input-container>
-                  <clr-input-container>
-                    <label>Field 2 label</label>
-                    <input clrInput formControlName="sample" />
-                  </clr-input-container>
+                  Some useful explanation on how to pick answers
+                  <clr-radio-container>
+                    <label>Full radio</label>
+                    <clr-radio-wrapper>
+                      <input type="radio" clrRadio name="sample" required value="option1" formControlName="sample" />
+                      <label>Option 1</label>
+                    </clr-radio-wrapper>
+                    <clr-radio-wrapper>
+                      <input type="radio" clrRadio name="sample" required value="option2" formControlName="sample"  />
+                      <label>Option 2</label>
+                    </clr-radio-wrapper>
+                    <clr-control-helper>Helper text</clr-control-helper>
+                    <clr-control-error>This field is required!</clr-control-error>
+                  </clr-radio-container>
                   <clr-textarea-container>
                     <label>Text Answers</label>
                     <textarea
