Add class tag to question container

--- a/src/app/components/practice/question-page/question-page.component.html
+++ b/src/app/components/practice/question-page/question-page.component.html
@@ -2,7 +2,7 @@
   <app-mtdj-header></app-mtdj-header>
   <div class="content-container" id="primary">
     <div class="content-area">
-      <div class="clr-row">
+      <div class="clr-row mtdj__question-container">
         <div class="clr-col-lg-6 clr-col-12">
           <div class="card">
             <div class="card-header">
