Add question display styling for larger screens

--- a/src/app/components/practice/question-page/question-page.component.html
+++ b/src/app/components/practice/question-page/question-page.component.html
@@ -2,8 +2,8 @@
   <app-mtdj-header></app-mtdj-header>
   <div class="content-container" id="primary">
     <div class="content-area">
-      <div class="clr-row mtdj__question-container">
-        <div class="clr-col-lg-6 clr-col-12">
+      <div class="clr-row mtdj__question-feature-area">
+        <div class="clr-col-lg-6 clr-col-12 mtdj__question-container">
           <div class="card">
             <div class="card-header">
               Question Title
@@ -29,7 +29,7 @@
             </div>
           </div>
         </div>
-        <div class="clr-col-lg-6  clr-col-12">
+        <div class="clr-col-lg-6  clr-col-12 mtdj__question-submission-container">
           <div class="card">
             <div class="card-header">
               Header
