Move show hints below questions

--- a/src/app/components/practice/question-page/question-page.component.scss
+++ b/src/app/components/practice/question-page/question-page.component.scss
@@ -7,7 +7,7 @@
     height: 100%;
   }
 
-  .mtdj__question-feature-area .card-footer {
+  .mtdj__question-feature-area .mtdj__question-submission-container .card-footer {
     position: absolute;
     bottom: 5px;
     left: 6px;
