--- a/src/app/components/practice/question-page/question-page.component.html
+++ b/src/app/components/practice/question-page/question-page.component.html
@@ -2,27 +2,25 @@
   <app-mtdj-header></app-mtdj-header>
   <div class="content-container" id="primary">
     <div class="content-area">
-      <div class="clr-row mtdj__question-feature-area">
+      <div class="clr-row mtdj__question-feature-area" *ngIf="question$ | async as question">
         <div class="clr-col-lg-6 clr-col-12 mtdj__question-container">
           <div class="card">
             <div class="card-header">
-              Question Title
+              {{question.formattedTitle}}
             </div>
             <div class="card-block">
               <div class="card-title">
-                Sub Header
+                Problem Description
               </div>
               <div class="card-text">
-                What is 2 + 2?
+                {{question.body}}
               </div>
               <div class="card-img">
                 <img src="..." />
               </div>
             </div>
             <ul class="list-group">
-              <li class="list-group-item">Hint 1: Lorem ipsum dolor.</li>
-              <li class="list-group-item">Hint 2: Lorem ipsum dolor sit.</li>
-              <li class="list-group-item">Hint 3: Lorem ipsum.</li>
+              <li class="list-group-item" *ngFor="let hint of question.hints">{{hint}}</li>
             </ul>
             <div class="card-footer">
               <button class="btn btn-sm btn-link">Show hints</button>
