--- a/src/app/components/practice/question-page/question-page.component.html
+++ b/src/app/components/practice/question-page/question-page.component.html
@@ -1,5 +1,24 @@
 <clr-main-container class="main-container">
   <app-mtdj-header></app-mtdj-header>
+  <nav class="subnav">
+    <ul class="nav">
+      <li class="nav-item">
+        <a class="nav-link" href="#">Practice</a>
+      </li>
+      <li class="nav-item">
+        >
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Topic</a>
+      </li>
+      <li class="nav-item">
+        >
+      </li>
+      <li class="nav-item">
+        <a class="nav-link active" href="#">Question</a>
+      </li>
+    </ul>
+  </nav>
   <div class="content-container" id="primary">
     <div class="content-area">
       <div class="clr-row mtdj__question-feature-area" *ngIf="question$ | async as question">
