--- a/src/app/components/practice/topic-page/topic-page.component.html
+++ b/src/app/components/practice/topic-page/topic-page.component.html
@@ -1,15 +1,15 @@
 <clr-main-container class="main-container">
   <app-mtdj-header></app-mtdj-header>
   <nav class="subnav">
-    <ul class="nav">
+    <ul class="nav" *ngIf="topic$ | async as topic">
       <li class="nav-item">
-        <a class="nav-link" href="#">Practice</a>
+        <a class="nav-link" routerLink="/dashboard">Practice</a>
       </li>
       <li class="nav-item">
         >
       </li>
       <li class="nav-item">
-        <a class="nav-link active" href="#">Topic</a>
+        <a class="nav-link active" [routerLink]="['/topics', topic.title]">{{topic.formattedTitle}}</a>
       </li>
     </ul>
   </nav>
