--- a/src/app/components/pagenotfound/pagenotfound.component.scss
+++ b/src/app/components/pagenotfound/pagenotfound.component.scss
@@ -1,12 +1,10 @@
-@import 'node_modules/@clr/ui/src/color/_variables.color.scss';
-
 header .branding .mtdj__logo {
    height: 36px;
    margin: 0 9px 0 0;
 }
 
 header .header-actions .mtdj__button_signup {
-   background: $clr-color-action-600; 
+   background: var(--clr-color-action-600); 
    color: white;
 }
 
