--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -2,7 +2,7 @@
     <app-mtdj-header></app-mtdj-header>
     <div class="content-container" id="primary">
         <div class="content-area">
-            <div class="clr-row">
+            <div class="clr-row" *ngIf="topics$ | async as topics">
                 <div class="clr-col-lg-4 clr-col-md-6 clr-col-sm-8 clr-col-12" *ngFor="let topic of topics">
                     <a [routerLink]="['/topics', topic.title]" class="card clickable">
                         <div class="card-header">
